# DefaultRustAxumBackend

./: .gitignore  README.md
backend/: Cargo.toml  Makefile.toml
backend/.cargo/: config.toml
backend/db/: docker-compose.yml
backend/db/sql/migrations/: 01_recreate_tables.sql  02_seed.sql
backend/db/sql/reset_db/: 00-recreate_db.sql  00_recreate_db.sql  01-recreate_tables.sql  02-seed.sql
backend/src/: config_env.rs  error.rs  main.rs
backend/src/crypt/: crypt_test.rs  error.rs  jwt_token.rs  mod.rs  password.rs
backend/src/crypt/jwt_token/: mod.rs  tests.rs
backend/src/data_access/: base.rs  base_crud.rs  error.rs  mod.rs
backend/src/data_access/db_setup/: db_setup_test.rs  error.rs  mod.rs
backend/src/data_access/user/: controller.rs  mod.rs  model_structs.rs  user_test.rs
backend/src/data_access/user_controller/: mod.rs  user_controller_test.rs
backend/src/data_shapes/: user.rs
backend/src/db_setup/: db_setup.rs  db_setup_test.rs  mod.rs
backend/src/gate/: cookie.rs  error.rs  mod.rs
backend/src/gate/custom_extractors/: error.rs  ex_request_context.rs  mod.rs  request_context_extractor.rs
backend/src/gate/middlewares/: error.rs  middlewares_test.rs  mod.rs  mw_implant_request_context.rs  mw_require_request_context.rs
backend/src/gate/routes/: auth_routes.rs  error.rs  mod.rs  user_routes.rs
backend/src/integration_tests/: mod.rs
backend/src/log/: mod.rs  request_log_line.rs  tracer_config.rs
backend/src/request_context/: error.rs  mod.rs
backend/src/request_path/: cookie.rs  error.rs  mod.rs
backend/src/request_path/custom_extractors/: error.rs  mod.rs
backend/src/request_path/middlewares/: middlewares_test.rs  mod.rs  mw_implant_request_context.rs  mw_require_request_context.rs
backend/src/request_path/routes/: auth_routes.rs  mod.rs  user_routes.rs
backend/src/utils/: base64.rs  db_utils.rs  error.rs  mod.rs  time.rs  traits_for_proc_macros.rs  utils_test.rs
backend/src/utils/_dev/: mod.rs  reset_db.rs
backend/src/utils/proc-macros/: Cargo.toml
backend/src/utils/proc-macros/src/: lib.rs
backend/src/views/: user.rs
