[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"

# Serialization
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
serde_with = "3.12.0"

sqlx = { version = "0.8.3", features = ["postgres", "time", "runtime-tokio-rustls", "uuid"] }
tokio = { version = "1.43.0", features = ["full"] }

# Tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Proc Macros
proc-macros = { path="./src/utils/proc-macros" }
async-trait = "0.1.86"

[dev-dependencies]
serial_test = "3.2.0"
reqwest = { version = "0.12.12", features = ["json"] }

